--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Heading</h1>
+<h1> This is Heading</h1>
 <p>My first paragraph.</p>
 <h2>Second Heading</h2>
 <t>Good morning</t>
