--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 
 <h1> This is Heading</h1>
-<p>My first paragraph.</p>
-<h2>Second Heading</h2>
+<p>first paragraph.</p>
+
 
 </body>
 </html>
