Revert "first file"
This reverts commit 77c5e78f15a7db6de8ed159865e9bc75849b7e44.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 
 <h1> This is Heading</h1>
-<p>first paragraph.</p>
-
+<p>My first paragraph.</p>
+<h2>Second Heading</h2>
 
 </body>
 </html>
